# haiproject

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
data/: load_data.py
src/: config.py
src/ai_models/: __init__.py  base.py  collaborative.py  content_filtering.py  search_ai.py  search_keywords.py  search_title.py  utils.py
src/ai_models/trained/: collab_filtering_cache.pkl  search_title_cache.pkl
src/api/: dependencies.py  main.py
src/api/repositories/: __init__.py  auth_repo.py  base_repo.py  movie_repo.py  rating_repo.py  user_repo.py
src/api/routers/: __init__.py  auth_router.py  movie_router.py  rating_router.py  recommendation_router.py  recommendations_router.py  search_router.py  user_router.py
src/api/schemas/: __init__.py  movie.py  rating.py  token.py  user.py
src/backend/: config.py
src/backend/api/: main.py  utils.py
src/backend/api/repositories/: movie_repo.py  rating_repo.py  user_repo.py
src/backend/api/routers/: movie_router.py  rating_router.py  user_router.py  utils.py
src/backend/api/schemas/: __init__.py  base.py  genre.py  movie.py  rating.py  user.py
src/backend/database/: core.py
src/backend/database/models/: __init__.py  genre.py  movie.py  rating.py  user.py
src/database/: __init__.py  core.py  scripts.py
src/database/models/: __init__.py  genre.py  keyword.py  movie.py  user.py
tests/: test_recommendations.py
